# skills

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  extract_all.py  install_phantom_skills.py  pyproject.toml  run-pipeline.bat  run-pipeline.sh
.claude/: CLAUDE.md  settings.local.json
.github/: pull_request_template.md
_archive/: QUICK_START.md  fix_skills.py  fix_skills_pass3.py  fix_skills_structure.py
agent-factory/: agent-factory-blueprint-customization-service.md  agent-factory-client-tools.html
ai-agents-workflow/: SKILL.md
algorithmic-art/: SKILL.md
artifacts-builder/: SKILL.md
brand-guidelines/: SKILL.md
canvas-design/: SKILL.md
code-auditor/: SKILL.md
create-agent-skills/: SKILL.md
create-hooks/: SKILL.md
create-slash-commands/: SKILL.md
create-subagents/: SKILL.md
data/: concept-descriptions.json  enhancement-status.json  tier-1-enhancement-template.md  tier-1-skills-candidates.csv
debug-like-expert/: SKILL.md
design-system-builder/: SKILL.md
doc-coauthoring/: SKILL.md
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  INDEX.md  PLATFORM_OUTPUTS.md  SCRIPTS_REFERENCE.md.bak  SKILL_FORMAT_SPEC.md  claude-desktop-fix.md  readme-claude-desktop-fix.md
internal-comms/: SKILL.md
launching-digital-products/: SKILL.md
lib/: __init__.py  config.py  encoding.py  logger.py  metadata_enricher.py  platform_tuning.py  skill_parser.py  skill_validator.py
master-skills/: MASTER_INDEX.md
mcp-builder/: SKILL.md
plugins/: design-system.plugin  notebooklm-production-studio.plugin
(+1050 files in other folders)
