[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-library"
version = "1.0.0"
description = "507-skill AI enhancement system with multi-platform output for Claude, Gemini, Copilot, and Codex"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that iterate all 500+ master skills (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 120
target-version = ["py310"]
